--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,29 +25,29 @@ jobs:
       - image: cimg/ruby:3.1.0
     steps:
       - checkout
+      # - run:
+      #     name: hello
+      #     command: echo hello
+      - setup_remote_docker
       - run:
-          name: hello
-          command: echo hello
-      # - setup_remote_docker
-      # - run:
-      #     name: docker-login
-      #     command: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-      # - run:
-      #     name: build-docker-image
-      #     command: docker build -t $IMAGE_NAME:latest . --build-arg SECRET_KEY_BASE=$SECRET_KEY_BASE
-      # - run:
-      #     name: publish-docker-image
-      #     command: docker push $IMAGE_NAME
-      # - run:
-      #     name: run-docker-image
-      #     command: docker run -p 3000:3000 -d $IMAGE_NAME
+          name: docker-login
+          command: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+      - run:
+          name: build-docker-image
+          command: docker build -t $IMAGE_NAME:latest . --build-arg SECRET_KEY_BASE=$SECRET_KEY_BASE
+      - run:
+          name: publish-docker-image
+          command: docker push $IMAGE_NAME
+      - run:
+          name: run-docker-image
+          command: docker run -p 3000:3000 -d $IMAGE_NAME
   deploy:
     docker:
       - image: cimg/ruby:3.1.0
     steps:
-      - run:
-          name: world
-          command: echo world
       # - run:
-      #     name: deploy-application
-      #     command: ssh -o StrictHostKeyChecking=no $EC2_USERNAME@$EC2_PUBLIC_DNS "export PRIVATE_KEY=\"$PRIVATE_KEY\"; export SERVER=\"$SERVER\"; export CONTAINER_NAME=\"$CONTAINER_NAME\"; export IMAGE_NAME=\"$IMAGE_NAME\"; rm -rf apple/; git clone https://github.com/JVNCI/apple.git; source apple/deploy.sh"
+      #     name: world
+      #     command: echo world
+      - run:
+          name: deploy-application
+          command: ssh -o StrictHostKeyChecking=no $EC2_USERNAME@$EC2_PUBLIC_DNS "export CONTAINER_NAME=\"$CONTAINER_NAME\"; export IMAGE_NAME=\"$IMAGE_NAME\"; rm -rf articleApp/; git clone https://github.com/JVNCI/articleApp.git; source articleApp/deploy.sh"
