--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,12 @@ jobs:
           name: install-bundle
           command: bundle install
       - run:
+          name: set-test-env
+          command: set RAILS_ENV=test
+      - run:
+          name: setup-db
+          command: rails db:setup
+      - run:
           name: test-run
           command: rails test
       - setup_remote_docker
